[package]
name = "did-hosting-server"
description = "DID Hosting Server, handles management and serving of WebVH Content"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = ["keyring", "store-fjall", "method-webvh", "method-web"]
metrics = ["did-hosting-common/metrics"]
keyring = ["did-hosting-common/keyring"]
# DID method routing (T25). Each method's resolve-side routes are
# gated behind its feature; the server fails to compile with no
# methods enabled (matches the common-crate behaviour at T31).
method-webvh = ["did-hosting-common/method-webvh"]
method-web = ["did-hosting-common/method-web"]
aws-secrets = ["dep:aws-sdk-secretsmanager", "dep:aws-config", "did-hosting-common/aws-secrets"]
gcp-secrets = [
  "dep:google-cloud-secretmanager-v1",
  "dep:google-cloud-auth",
  "dep:bytes",
  "did-hosting-common/gcp-secrets",
]
azure-secrets = [
  "dep:azure_security_keyvault_secrets",
  "dep:azure_identity",
  "dep:azure_core",
  "dep:futures",
  "did-hosting-common/azure-secrets",
]
store-fjall = ["dep:fjall", "did-hosting-common/store-fjall"]
store-redis = ["dep:redis", "did-hosting-common/store-redis"]
store-dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config", "did-hosting-common/store-dynamodb"]
store-firestore = ["dep:firestore", "dep:futures", "did-hosting-common/store-firestore"]
store-cosmosdb = ["dep:azure_data_cosmos", "dep:azure_core", "dep:futures", "did-hosting-common/store-cosmosdb"]
# Generate an OpenAPI 3.1 spec for the HTTP upload/resolve API (issue #47).
# Off by default — only the `openapi_snapshot` test and a doc-gen build need it.
# Requires method-webvh (the well-known resolve path is documented).
openapi = ["dep:utoipa", "method-webvh"]

[lib]
name = "did_hosting_server"
path = "src/lib.rs"

[[bin]]
name = "did-hosting-server"
path = "src/main.rs"

[dependencies]
did-hosting-common = { version = "0.7", path = "../did-hosting-common", features = ["server-core", "setup-wizard"] }
# OpenAPI spec generation (behind the off-by-default `openapi` feature).
utoipa = { version = "5", optional = true }
vti-common = { version = "0.10.3", default-features = false }
async-trait = "0.1"
affinidi-tdk = { workspace = true }
affinidi-messaging-didcomm-service = { workspace = true }
affinidi-tdk-common = { workspace = true }
affinidi-messaging-didcomm = { workspace = true }
affinidi-secrets-resolver = { workspace = true }
tokio-util = { workspace = true }
affinidi-did-resolver-cache-sdk = "0.8"
axum = "0.8"
axum-extra = { workspace = true }
base64 = { workspace = true }
bip39 = "2"
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
didwebvh-rs = { workspace = true }
ed25519-dalek = { workspace = true }
fjall = { workspace = true, optional = true }
hex = "0.4"
ipnetwork = "0.21"
jsonwebtoken = { workspace = true }
multibase = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
toml = "1.0"
vta-sdk = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", features = [
  "behavior-version-latest",
], optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
google-cloud-auth = { version = "1", optional = true }
bytes = { version = "1", optional = true }
redis = { version = "1.0", features = ["tokio-comp", "aio"], optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
firestore = { version = "0.49", optional = true }
futures = { version = "0.3", optional = true }
azure_data_cosmos = { version = "0.34", features = [
  "key_auth",
], optional = true }
azure_core = { version = "1.0", optional = true }
azure_security_keyvault_secrets = { version = "1.0", optional = true }
azure_identity = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3"
anyhow.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
ratatui = "0.30"
crossterm = "0.29"
reqwest = { workspace = true }
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
