[package]
name = "affinidi-webvh-common"
description = "WebVH Common, Common methods and structs related to WebVH Content"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
metrics = ["server-core", "dep:prometheus"]
server-core = [
    "dep:axum", "dep:axum-extra", "dep:jsonwebtoken", "dep:ed25519-dalek",
    "dep:multibase", "dep:chrono", "dep:rand", "dep:tokio", "dep:tokio-util",
    "dep:tower-http", "dep:tracing-subscriber", "dep:hex",
]
store-fjall = ["server-core", "dep:fjall"]
store-redis = ["server-core", "dep:redis"]
store-dynamodb = ["server-core", "dep:aws-sdk-dynamodb", "dep:aws-config"]
store-firestore = ["server-core", "dep:firestore", "dep:futures"]
store-cosmosdb = ["server-core", "dep:azure_data_cosmos", "dep:azure_core", "dep:futures"]
# Native OS keyring secret backend.
#
# Supported targets: macOS, Windows, Linux (and any other Unix with a Secret
# Service implementation reachable over D-Bus). Each backend dep is declared
# under a `[target.'cfg(...)']` block, so on any *unsupported* target the
# feature is harmless to enable but `KeyringSecretStore::try_new` returns
# `AppError::SecretStore("...no native keyring backend available...")`.
keyring = [
    "server-core",
    "dep:keyring-core",
    "dep:apple-native-keyring-store",
    "dep:windows-native-keyring-store",
    "dep:dbus-secret-service-keyring-store",
]
aws-secrets = ["server-core", "dep:aws-sdk-secretsmanager", "dep:aws-config"]
gcp-secrets = ["server-core", "dep:google-cloud-secretmanager-v1", "dep:google-cloud-auth", "dep:bytes"]
azure-secrets = ["server-core", "dep:azure_security_keyvault_secrets", "dep:azure_identity", "dep:azure_core", "dep:futures"]
setup-wizard = ["server-core", "dep:dialoguer"]
passkey = ["server-core", "dep:webauthn-rs", "dep:webauthn-rs-proto"]

[dependencies]
affinidi-tdk = { workspace = true }
affinidi-tdk-common = { workspace = true }
affinidi-secrets-resolver = { workspace = true }
affinidi-did-resolver-cache-sdk = { workspace = true }
didwebvh-rs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vta-sdk = { workspace = true }

# server-core dependencies (optional)
axum = { version = "0.8", optional = true }
axum-extra = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
multibase = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
tracing-subscriber = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }
toml = "1.0"

# store backends (optional)
fjall = { workspace = true, optional = true }
redis = { version = "1.0", features = ["tokio-comp", "aio"], optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
firestore = { version = "0.48", optional = true }
futures = { version = "0.3", optional = true }
azure_data_cosmos = { version = "0.33", features = ["key_auth"], optional = true }
azure_core = { version = "0.35", optional = true }

# secret store backends (optional)
keyring-core = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
google-cloud-auth = { version = "1", optional = true }
bytes = { version = "1", optional = true }
azure_security_keyvault_secrets = { version = "0.14", optional = true }
azure_identity = { version = "0.35", optional = true }

# Setup wizard helper (optional, behind `setup-wizard` feature)
dialoguer = { workspace = true, optional = true }

# passkey / WebAuthn (optional)
webauthn-rs = { workspace = true, optional = true }
webauthn-rs-proto = { workspace = true, optional = true }

# Prometheus metrics (optional, behind `metrics` feature)
prometheus = { version = "0.14", default-features = false, optional = true }

# base64 (needed by firestore/cosmosdb store backends)
base64 = { workspace = true }

# Platform-specific keyring backends (only compiled on the target OS)
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1", optional = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
