[package]
name = "webvh-watcher"
description = "WebVH Watcher, read-only DID mirror service"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = ["store-fjall"]
store-fjall = ["did-hosting-common/store-fjall"]
store-redis = ["did-hosting-common/store-redis"]
store-dynamodb = ["did-hosting-common/store-dynamodb"]
store-firestore = ["did-hosting-common/store-firestore"]
store-cosmosdb = ["did-hosting-common/store-cosmosdb"]

[lib]
name = "webvh_watcher"
path = "src/lib.rs"

[[bin]]
name = "webvh-watcher"
path = "src/main.rs"

[dependencies]
did-hosting-common = { version = "0.8", path = "../did-hosting-common", features = ["server-core"] }
axum = "0.8"
axum-extra = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "1.0"
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
